fix(Timeline): can not align with icon

--- a/components/timeline/index.styl
+++ b/components/timeline/index.styl
@@ -30,7 +30,7 @@
                 left 50%
         > .k-content
             position relative
-            top -1ex 
+            top s('calc(-%s / 2)', unit($line-height, em))
         &:last-of-type
             > .k-indicator
                 .k-line
